--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,8 @@ flake8-builtins = "*"
 flake8-docstrings = "*"
 black = { version = "19.10b0", python = "^3.6" }
 # Tests
-pytest = "*"
-pytest-cov = "*"
+pytest = "^7.4.3"
+pytest-cov = "^4.1.0"
 
 [tool.poetry.scripts]
 ubit = 'ubittool.__main__:main'
